--- a/.github/workflows/kmir.yml
+++ b/.github/workflows/kmir.yml
@@ -19,20 +19,28 @@ jobs:
   run-kmir-proofs:
     name: Run supplied KMIR proofs
     runs-on: ubuntu-latest
-    container: runtimeverificationinc/kmir:ubuntu-jammy-0.3.112_7.1.229-daf5158
+    env:
+      container_name: "kmir-${{ github.run_id }}"
       
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-        with:
-          path: head      
 
-      - name: Run KMIR Verification
+      - name: Start Tool Container
         run: |
-          cd kmir-proofs
-          for k_file in */*-spec.k; do
+          docker run --detach --rm -t \
+            --name ${{ env.container_name }} \
+            -v $PWD:/workspace -w /workspace \
+            -u $(id -u):$(id -g) \
+            runtimeverificationinc/kmir:ubuntu-jammy-0.3.112_7.1.229-daf5158 /bin/bash
+
+      - name: Run KMIR Verification for all proofs provided
+        run: |
+          for k_file in kmir-proofs/*/*-spec.k; do
             echo "Running ${k_file}"
-            kmir prove run ${k_file} --proof-dir $(dirname ${k_file})/proofs
+            docker exec ${{ env.container_name }} kmir prove run ${k_file} --proof-dir $(dirname ${k_file})/proofs
           done
 
-          
+      - name: Stop Tool Container
+        if: always()
+        run: docker stop ${{ env.container_name }}
