--- a/.github/workflows/kmir.yml
+++ b/.github/workflows/kmir.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           for k_file in kmir-proofs/*/*-spec.k; do
             echo "Running ${k_file}"
-            docker exec -t ${{ env.container_name }} kmir prove run ${k_file} --proof-dir $(dirname ${k_file})/proofs
+            docker exec -t ${{ env.container_name }} kmir prove run ${k_file}
           done
 
       - name: Stop Tool Container
